--- a/index.html
+++ b/index.html
@@ -6,7 +6,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Ashis's Personal Site</title>
+
+
+
+  <style>
+    body {
+      background-color: #EAF6F6;
+    }
+    hr {
+      background-color: white;
+      border-style:none none none none;
+      border-top: dotted;
+
+      border-color: grey;
+      border-width: 6px;
+      width: 5%;
+    }
+
+
+  </style>
 </head>
+
+
+
 
 <body>
   <table cellspacing="20">
@@ -48,7 +70,7 @@
   </ul>
   <strong>
 
-        <hr style="color: red">
+    <hr />
   </strong>
 
 
@@ -110,7 +132,7 @@
 
 
   <hr />
-  <a href="Hobbies.html">
+  <a href="hobbies.html">
     <h3><strong><em>My Favriote songs</em></strong></h3>
   </a>
   <a href="contactDetails.html">
